# MyoChallengeAnalysis

./: .csv  .gitignore  LICENSE  README.md  pyproject.toml
SIL-Results/Linear-correlation/: 01_rsi_static.csv  32_phase_2_smaller_rate_resume.csv  Last-model.csv  v2_32_phase_2_smaller_rate_resume.csv
SIL-Results/UMAP_layers/: acts.html  l1.html  l2.html  lstm.html  obs.html
bastien/: README.md
bastien/src/: main_eval.py
src/: Analysis_abigail.ipynb  PA_heatmap.py  PA_performance.py  PA_performance_removePA.py  PA_phase.py  PA_plot.py  PA_video.py  PCA.py  PanelA_Motor-Synergies.ipynb  PanelA_Motor-Synergies_all_tasks.ipynb  PanelB.ipynb  PanelB_low_variance_pcs.ipynb  PanelC_Principal-Actions.ipynb  PanelD_Linear-Correlation.ipynb  PanelE_Tangling.ipynb  UMAP_layers.py  UMAP_physics.py  crop_images.py  csi_and_fig_s4.ipynb  definitions.py  download_data.ipynb  fig_1.ipynb  fig_2.ipynb  fig_3.ipynb  fig_4.ipynb  fig_5.ipynb  fig_6.ipynb  functions.py  functions_notebook.py  helpers.py  individuated_synergies.py  linear_correlation.py  main_baoding.py  main_baoding_muscles.py  main_eval.py  manipulation_synergies.py  plot_trajectory.py  principal_actions_heatmap.py  principal_actions_performance.py  principal_actions_phase.py  (+8 more)
src/envs/: __init__.py  baoding.py  environment_factory.py
src/legacy/: CW-CCW_pca.py  Full-space_tangling.py  Hold-vs-Rotation_perf.py  P1-E2_perf-vs-physics.py  P1_perf-vs-physics.py  P2_perf-vs-physics.py  PA_heatmap.py  PA_performance.py  PA_phase.py  PA_video.py  PCA.py  PCA_tangling.py  PanelA_Motor-Synergies.ipynb  UMAP_physics.py  (+23 more)
(+42 files in other folders)
